apply high performance server config